versioned_docs/version-0.24.0/api/server/interfaces/RoomConfig.md
# Interface: RoomConfig

Defined in: fishjam-openapi/dist/index.d.ts:408

Room configuration

## Export

RoomConfig

## Properties

### maxPeers?

> `optional` **maxPeers**: `null` \| `number`

Defined in: fishjam-openapi/dist/index.d.ts:414

Maximum amount of peers allowed into the room

#### Memberof

RoomConfig

***

### public?

> `optional` **public**: `boolean`

Defined in: fishjam-openapi/dist/index.d.ts:420

True if livestream viewers can omit specifying a token.

#### Memberof

RoomConfig

***

### roomType?

> `optional` **roomType**: [`RoomType`](../enumerations/RoomType.md)

Defined in: fishjam-openapi/dist/index.d.ts:426

#### Memberof

RoomConfig

***

### videoCodec?

> `optional` **videoCodec**: [`VideoCodec`](../enumerations/VideoCodec.md)

Defined in: fishjam-openapi/dist/index.d.ts:432

#### Memberof

RoomConfig

***

### webhookUrl?

> `optional` **webhookUrl**: `null` \| `string`

Defined in: fishjam-openapi/dist/index.d.ts:438

URL where Fishjam notifications will be sent

#### Memberof

RoomConfig
